# dKS

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  Untitled-1  Untitled-1.py  Untitled-2.py  Untitled-3.py  pyproject.toml  setup.py  test.ipynb
archive/cpp-scratch/: baseline.cpp  baselineAlg.cpp  bslneCplus.cpp  bslneCpluserror.cpp  bslneCpluserrorseeds.cpp  ourAlg.cpp  ourAlgerror.cpp  ourAlgerrorSeeds.cpp
bindings/python/: dks_py.cpp  example.py  test_dks_py.py
cli/: dks_cli.cpp
docs/: index.html  poster.html
examples/: example.cpp
experiments/: README.md  generators.py  make_fig8_combined.py  make_fig8_rerun.py  methods.py  plots.py  prep_nhanes.py  run_100k_topup.py  run_calibration.py  run_heightweight.py  run_one_cell.py  run_par_baseline.py  run_par_sketch.py  run_penguins.py  run_power.py  run_runtime.py  run_scan.py
experiments/data/: nhanes.csv
experiments/results/: baseline_par.csv  baseline_par_raw.csv  clean_rt_100k.csv  runtime.csv  scan_all_z20.csv  scan_all_z20_raw.csv  scan_w100.csv  wk_baseline.csv
experiments/tests/: validate_experiments.py
include/dks/: dks.hpp
tests/: test_dks.cpp
